# Solar-Radio-Interferometric-Imaging

./: .gitignore  AGENTS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-0ld.md  README.md  config.py  environment.yml  process_main.py  pyproject.toml  utils.py
.github/workflows/: ci.yml
calibration/: README.md  do_applycal.py  do_crosscal.py  setjy.py
demo/: README.md  example_meerkat_config.yml  meerkat_workflow_demo.md  run_full_disk_imaging_20241229_scan4.py  run_meerkat_20241229_scan4_point.py  run_meerkat_selfcal_20241229_scan4.py  vla_workflow_demo.md
docs/: README.md  full_disk_science_imaging.md  legacy_scan4_mapping.md  legacy_selfcal_mapping.md  primary_beam_correction.md  self_calibration.md  workflow_overview.md
docs/legacy/: disk_img_slfcal.py  meerkat_proc_1229_scan4_point.py  selfcal.py  slfcal_update.py
imaging/: README.md  full_disk_science_imaging.py  qlook_image.py  sci_image.py
ms_processing/: README.md  partition_ms.py  split_cal.py
output/: README.md  extract_dynamic_spectra.py  make_fits_cube.py  make_movies.py
pb_correction/: README.md  apply_pb_correction.py  shifted_center.py
pre_processing/: README.md  initial_flag.py  pre_calibration.py
self_calibration/: README.md  __init__.py  apply_selfcal.py  create_masks.py  do_selfcal.py  dr_check.py  gaincal_tools.py  initial_imaging.py  prepare_selfcal.py  selfcal_pipeline.py  utils.py
tests/: test_repository_structure.py
